//
// (C) Copyright 2020 Intel Corporation.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
// GOVERNMENT LICENSE RIGHTS-OPEN SOURCE SOFTWARE
// The Government's rights to use, modify, reproduce, release, perform, display,
// or disclose this software are subject to the terms of the Apache License as
// provided in Contract No. 8F-30005.
// Any reproduction of computer software, computer software documentation, or
// portions thereof marked with this legend must also reproduce the markings.
//

syntax = "proto3";
package ctl;

message FirmwareQueryReq {
	bool queryScm = 1; // Should we query SCM devices?
	bool queryNvme = 2; // Should we query NVMe devices?
}

message ScmFirmwareQueryResp {
	string uid = 1; // SCM device UID
	uint32 handle = 2; // SCM device handle
	string activeVersion = 3; // Active FW version
	string stagedVersion = 4; // Staged FW version
	uint32 imageMaxSizeBytes = 5; // Maximum size of FW image accepted
	uint32 updateStatus = 6; // Status of FW update
	string error = 7; // Error string, if any
}

message FirmwareQueryResp {
	repeated ScmFirmwareQueryResp scmResults = 1;
}